Fix issue where bottom row slightly misaligned
 - Add div .bottomRow.bottomBtn to wrap the '.' and '=' buttons
 - Reduce flex on '0' button to flex 1; '0' button and div wrapper distribute evenly
 - Add flex and gap to .bottomBtn, now distribute evenly within its wrapper

--- a/css/calc.css
+++ b/css/calc.css
@@ -41,6 +41,14 @@
     gap: 10px;
 }
 
+.bottomRow {
+    display: flex;
+}
+
+.bottomRow.bottomBtn {
+    gap: 10px;
+}
+
 button {
     flex: 1 0 0;
     padding: 0;
@@ -50,7 +58,7 @@ button {
 }
 
 .zeroBtn {
-    flex: 2 0 auto;
+    flex: 1 0 auto;
 }
 
 .bottomBtn {
